--- a/static/resume/resume_zh.html
+++ b/static/resume/resume_zh.html
@@ -150,7 +150,7 @@ dd ul {
 
   <div id="objective">
     <p>
-    学习能力 数据敏感 好奇<br />
+    持续学习 数据敏感 好奇 团队管理<br />
     金融计量经济学 统计学 数据挖掘<br />
     SQL MongoDB Hive<br/>
     R Shiny Python Linux
@@ -167,7 +167,7 @@ dd ul {
     <dd>
 
     <h2>有利网
-      <span>北京，中国</span></h2>
+      <span>北京</span></h2>
     <h3>数据分析师
       <span>2016-05 ~ 2018-05</span></h3>
     <h3>现金贷风控负责人
@@ -176,75 +176,78 @@ dd ul {
       <li>运营和决策部门数据支持。
         <ul>
           <li>用户行为特征分析：留存时间、活跃频率、奖励和产品偏好等等。</li>
-          <li>根据用户历史行为数据，利用基于 RFM 方法的分类模型，
+          <li>根据用户历史行为数据，利用基于 RFM 方法的 GBDT 分类模型，
           预测用户未来增加投资和赎回概率，
-          为电销团队提供用户分类以进行精准化营销。
+          使电销团队可以对用户进行精准化营销。
           </li>
           <li>推广渠道效果分析：
           渠道表现之间的相互作用、
-          渠道 ROI 标准的制定、
-          转化率表现报告、
-          渠道数据作弊的排查，
-          协助业务团队评判推广渠道效果和可疑作弊渠道。
+          推广渠道的 ROI 标准的制定、
+          转化率与购买表现报告、
+          通过数据甄别有作弊嫌疑的渠道。
           </li>
-          <li>参与活动策划，确保方案满足事后统计检验的条件；
-          活动后提供数据反馈；利用滚动 A/B 测试，持续优化运营方案。</li>
-          <li>利用时间序列模型，预测平台整体投资和赎回数据，
+          <li>参与活动策划，确保方案满足统计检验条件；
+          活动后提供数据反馈；滚动 A/B 测试，持续优化运营方案；
+          在假设检验中使用费舍尔精确检验替代卡方检验。</li>
+          <li>建立平台整体投资和赎回的时间序列模型，
           更科学地预测每日、每周以及每月的平台资金状态。
           </li>
-          <li>优化支付系统，定位并调研遭遇支付障碍的用户，测试移动端和PC端不同系统下的支付功能，将问题反馈给产品部门。</li>
-          <li>定期为决策层提供阶段性经营分析报告，定位运作中的存在的问题和可能的改进方向。</li>
-          <li>按照业务逻辑建立数据库字典，
+          <li>优化支付系统：通过支付数据定位并调研遭遇支付障碍的用户，
+          测试移动端和PC端不同系统下的支付功能，将问题反馈给产品部门。</li>
+          <li>定期为决策层提供经营分析报告，定位存在的问题和可能的改进方向。</li>
+          <li>按业务逻辑建立数据库字典，
           将分散在各个业务方向的数据定义集中沉淀到文档中，
           减少部门之间的交流误解，方便新员工快速熟悉业务。</li>
         </ul>
       </li>
-      <li>监控系统的设计与实现</li>
+      <li>设计与实现监控系统。</li>
         <ul>
-          <li>监控推广渠道的各阶段转化率，当低于预测区间阈值时将相关数据实时发送给渠道负责人。</li>
-          <li>从支付平台和银行等多维度监控平台支付系统的成功率，当低于预测区间阈值时将相关数据发送至负责人。</li>
-          <li>根据三方数据服务接口的不同错误返回状态，监控接口的状态。</li>
-        </ul>
-      <li>开发和维护数据可视化工具。</li>
-        <ul>
-          <li>管理团队用于数据计算和可视化的近 10 台服务器，包括环境配置、权限管理等等。</li>
-          <li>开发基于 <a href="http://shiny.rstudio.com/">R/Shiny</a> 的可视化工具页面，
-          例如：
-          推广渠道的深入分析报告，展示不同期限下的表现，帮助业务人员跟踪渠道的真实表现；
-          用户的历史行为信息汇集和关键指标展示，帮助电销人员和产品同事快速了解某批用户；
-          现金贷通过率、出借、还款等表现的实时数据展示；
-          等等。
+          <li>设计并参与开发推广渠道的各阶段转化率监控，
+          根据二项式检验判断转化率异常，
+          并实时将异常发送给渠道负责人。</li>
+          <li>设计并参与开发支付系统成功率的监控，
+          从支付平台和银行等多维度寻找异常，
+          相较基于阈值的监控对异常更敏感，并定位了若干支付流程可优化点。
+          </li>
+          <li>设计并参与开发风控系统与三方数据服务的异常监控，
+          如服务器状态异常、数据接口异常、规则通过率异常等等；
+          后期配合 Kibana 可视化组件，大幅加快定位和修复系统故障的速度。
           </li>
         </ul>
+      <li>开发和维护数据可视化工具。
+        <ul>
+          <li>管理数据团队用于数据计算和可视化的近 10 台服务器，包括生产环境配置、权限管理等等。</li>
+          <li>开发数据工具页面（<a href="http://shiny.rstudio.com/">R/Shiny</a>），
+          大幅减少可自动化的重复工作，
+          例如：
+          <ul>
+            <li>推广渠道的深入分析报告，帮助业务人员跟踪渠道的不同时间后的效果。</li>
+            <li>用户的历史行为信息汇集和关键指标展示，帮助电销人员和产品部门快速了解特定用户群。</li>
+            <li>现金贷通过率、出借、还款等表现的实时数据可视化。</li>
+          </ul>
+          </li>
+        </ul>
+      </li>
+
       <li>设计、开发和维护风控系统。
         <ul>
-          <li>调研市场上已有的现金贷产品，与产品同事共同确定风控部门的具体需求。</li>
+          <li>调研市场上已有的现金贷产品，与产品同事共同确定风控部门的需求。</li>
           <li>设计风控系统流程，完成风控系统的生产开发文档，测试并验收风控系统。</li>
           <li>协助研发定位线上风控系统中的 bug，与研发协商解决方案。</li>
-          <li>负责开发和维护部分线上风控规则模块。</li>
-          <li>实现了不需要人工参与的全自动贷款审批，风控系统整体效果稳定提升，
+          <li>管理风控规则，维护开发文档，参与开发和维护部分线上风控规则模块。</li>
+          <li>实现全自动贷款审批，风控系统效果稳定提升，
           坏帐率达到行业内最低水平。</li>
           <li>与研发协同设计和开发第二版和第三版风控系统。</li>
         </ul>
       </li>
-      <li>三方数据维护。
-        <ul>
-          <li>评估外部第三方数据服务，与服务方对接。</li>
-          <li>整理和输出数据接口与数据使用开发文档，
-          从数据中提取有价值特征信息，
-          制定使用该特征的风控规则。</li>
-          <li>后续检验数据质量和效果。</li>
-        </ul>
-      </li>
       <li>主持风控模型的研发和部署。
         <ul>
-          <li>协调团队从原始数据中挖掘相关特征，为模型训练准备了几千个特征变量。</li>
+          <li>协调风控团队从原始数据中挖掘相关特征，
+          为模型训练准备了几千个特征变量。</li>
           <li>评估评分模型效果并部署到线上风控系统中，
-          对不同的用户分别训练模型，
+          按不同用户类型使用不同的评分模型，
           模型的迭代速度从一个月一次到每周一次。</li>
         </ul>
-      </li>
-      <li>风控团队管理，主持每周组会，定期组织学术和技术分享，每周撰写部门周报。
       </li>
       <li>开发和维护团队 R 程序包，简化和标准化团队的工作流程。
         <ul>
@@ -254,9 +257,22 @@ dd ul {
           计算资产运营关键指标；
           模型训练、验证和检验相关功能。</li>
           <li><em>YooliR</em>：
-          与数据库交互，输出常用图表，测试假设检验。</li>
+          实现与数据库交互；
+          标准输出常用数据图表；
+          整合测试假设检验报告。</li>
         </ul>
       </li>
+      <li>对接三方数据服务。
+        <ul>
+          <li>评估外部第三方数据服务，与服务方对接。</li>
+          <li>整理数据接口的开发文档，提出需求并与研发对接开发。</li>
+          <li>使用历史测试样本初始化风控规则，根据线上表现检测数据质量并改进风控规则。</li>
+        </ul>
+      </li>
+
+      <li>风控团队建设：主持每周组会，定期组织学术和技术分享，每周汇总组员周报并撰写部门周报。
+      </li>
+
     </ul>
 
     <h2>中国平安人寿保险股份有限公司
@@ -284,7 +300,7 @@ dd ul {
     </ul>
 
     <h2>红旗在线网站
-      <span>北京，中国</span></h2>
+      <span>北京</span></h2>
     <h3>网站维护
       <span>2004 - 2005</span></h3>
     <ul>
@@ -323,7 +339,7 @@ dd ul {
       </ul>
 
     <h2>北京大学
-      <span>北京，中国</span></h2>
+      <span>北京</span></h2>
     <h3>
       元培计划（学院），经济学学士
       <span>2003 - 2007</span>
@@ -379,8 +395,8 @@ dd ul {
     <dd>
 
     <h2>计算编程</h2>
-    <p>R，Python，C/C++，Matlab，Shell</p>
-    <p>SQL，MongoDB, Hadoop</p>
+    <p>R，Python，C/C++，Matlab，Shell<br/>
+    SQL，MongoDB, Hadoop</p>
 
     <h2>网页制作</h2>
     <p>HTML & CSS，Javascript</p>
