minor word updates

--- a/static/resume/resume_en.html
+++ b/static/resume/resume_en.html
@@ -166,7 +166,7 @@ dd ul {
     <h3>Data Analyst
       <span>2016/05 - 2018/05</span></h3>
     <h3>Risk Management Director
-      <span>2016/10 - 2017/12</span></h3>
+      <span>2016/10 - 2018/05</span></h3>
 
     <ul>
       <li>Data analysis for marketing and management departments.
@@ -183,7 +183,7 @@ dd ul {
           conversion rates and investment performance reports,
           detecting cheating advertising partners based on data mining.
           </li>
-          <li>Advised promotion strategy on statistics testing conditions;
+          <li>Advised promotion strategy on statistical testing conditions;
           evaluated effectiveness of campaigns;
           improved marketing strategies with rolling A/B testing;
           replaced chi-squared test with Fisher's exact test.
@@ -192,13 +192,13 @@ dd ul {
           withdraw, to provide more scientific insight of daily, weekly,
           and monthly cash flow.
           </li>
-          <li>Improved transcation process:
-          locating and investigated users who experienced transcation failures,
+          <li>Improved transaction process:
+          locating and investigated users who experienced transaction failures,
           then reporting the issue to related department.
           </li>
           <li>Authored monthly operating analysis report,
           locating issues and proposing improvements.</li>
-          <li>Created database documents accomdating daily tasks and
+          <li>Created database documents accommodating daily tasks and
           centralized statistics calibration across departments,
           minimizing misunderstanding and assisting colleagues to learn
           the work flow.</li>
@@ -222,17 +222,17 @@ dd ul {
         </ul>
       <li>Developed and maintained visualization tools.
         <ul>
-          <li>Managed about 10 servers of the data team for computing and
+          <li>Maintained about 10 servers of the data team for computing and
           visualization tools, including configuration and user management.</li>
-          <li>Developed data visulization webpages (<a href="http://shiny.rstudio.com/">R/Shiny</a>), greatly reduced automatable tasks, such as:
+          <li>Developed data visualization web pages (<a href="http://shiny.rstudio.com/">R/Shiny</a>), greatly reduced automatable tasks, such as:
           <ul>
             <li>Advanced performance reports of marketing channels,
             assisting business developers to track performance.</li>
-            <li>Integrated webpage of user activity and key statistics,
-            asssting marketing and sale service departments to gain insight on groups
+            <li>Integrated web page of user activity and key statistics,
+            assisting marketing and sale service departments to gain insight on groups
             of customers.
             </li>
-            <li>Integrated webpage of small credit loan statistics:
+            <li>Integrated web page of small credit loan statistics:
             approval rates, default rates, capital balance, etc.
             </li>
           </ul>
@@ -262,26 +262,26 @@ dd ul {
       </li>
       <li>Coordinated training and implementing credit models.
         <ul>
-          <li>Organizing feature engineeing tasks to team member,
+          <li>Organizing feature engineering tasks to team member,
           and constructed thousands of feature variables to feed into models.
           </li>
           <li>Evaluated credit score models
           and oversaw the deployment to the system;
           constructed multiple models according to different groups of users;
-          acceralted model upgrades from monthly to weekly.
+          accelerated model upgrades from monthly to weekly.
           </li>
         </ul>
       </li>
       <li>Developed and maintained team R packages, to simplify and
       standardize work flows.
         <ul>
-          <li><em>Rygpdl</em>：
+          <li><em>Rygpdl:</em>
           database interaction with SQL, MongoDB, and other data service APIs;
           data cleansing and feature extraction from raw user information (texts);
           computation of key operation statistics and common tables;
           model training, validation and selection reports.
           </li>
-          <li><em>YooliR</em>：
+          <li><em>YooliR:</em>
           database interaction with databases;
           standardizing outputs of data tables and visualization;
           hypothesis testing and statistics reports.
@@ -302,6 +302,7 @@ dd ul {
         <ul>
           <li>Coordinated tasks among team members and oversaw the outcome.</li>
           <li>Organized weekly team meeting for work updates and expertise presentations.</li>
+          <li>Reviewed members' weekly working reports and authored team reports.</li>
         </ul>
       </li>
 
@@ -416,7 +417,7 @@ dd ul {
       <h2>Historical Air Quality Index of Chinese cities</h2>
       <ul>
         <li>Collect and clean hourly AQI of five Chinese cities during 2008 – 2014.</li>
-        <li>Analyze the hourly, daily, monthly, and seasonly patterns of AQI.</li>
+        <li>Analyze the hourly, daily, monthly, and seasonal patterns of AQI.</li>
       </ul>
 
     </dd>
@@ -435,7 +436,7 @@ dd ul {
     SQL，MongoDB, Hadoop</p>
 
     <h2>Web Designing</h2>
-    <p>HTML & CSS，Javascript</p>
+    <p>HTML & CSS，JavaScript</p>
 
     <h2>Language</h2>
       <p>Chinese (native), English (fluent).</p>
