--- a/static/resume/resume_zh.html
+++ b/static/resume/resume_zh.html
@@ -150,7 +150,7 @@ dd ul {
 
   <div id="objective">
     <p>
-    持续学习 数据敏感 好奇 团队管理<br />
+    持续学习 数据敏感 好奇 领导力<br />
     金融计量经济学 统计学 数据挖掘<br />
     SQL MongoDB Hive<br/>
     R Shiny Python Linux
@@ -175,15 +175,15 @@ dd ul {
     <ul>
       <li>运营和决策部门数据支持。
         <ul>
-          <li>用户行为特征分析：留存时间、活跃频率、奖励和产品偏好等等。</li>
+          <li>用户行为特征分析：留存时间、活跃频率、奖励和投资偏好等等。</li>
           <li>根据用户历史行为数据，利用基于 RFM 方法的 GBDT 分类模型，
-          预测用户未来增加投资和赎回概率，
+          预测用户未来增加投资或赎回的概率，
           使电销团队可以对用户进行精准化营销。
           </li>
           <li>推广渠道效果分析：
-          渠道表现之间的相互作用、
+          渠道效果之间的相互作用、
           推广渠道的 ROI 标准的制定、
-          转化率与购买表现报告、
+          转化率与投资表现报告、
           通过数据甄别有作弊嫌疑的渠道。
           </li>
           <li>参与活动策划，确保方案满足统计检验条件；
@@ -197,7 +197,7 @@ dd ul {
           <li>定期为决策层提供经营分析报告，定位存在的问题和可能的改进方向。</li>
           <li>按业务逻辑建立数据库字典，
           将分散在各个业务方向的数据定义集中沉淀到文档中，
-          减少部门之间的交流误解，方便新员工快速熟悉业务。</li>
+          减少部门之间的交流误解，方便新同事快速熟悉业务。</li>
         </ul>
       </li>
       <li>设计与实现监控系统。</li>
@@ -207,7 +207,7 @@ dd ul {
           并实时将异常发送给渠道负责人。</li>
           <li>设计并参与开发支付系统成功率的监控，
           从支付平台和银行等多维度寻找异常，
-          相较基于阈值的监控对异常更敏感，并定位了若干支付流程可优化点。
+          相较基于阈值的监控对异常更敏感，并定位了若干支付流程中可优化点。
           </li>
           <li>设计并参与开发风控系统与三方数据服务的异常监控，
           如服务器状态异常、数据接口异常、规则通过率异常等等；
@@ -233,7 +233,7 @@ dd ul {
         <ul>
           <li>调研市场上已有的现金贷产品，与产品同事共同确定风控部门的需求。</li>
           <li>设计风控系统流程，完成风控系统的生产开发文档，测试并验收风控系统。</li>
-          <li>协助研发定位线上风控系统中的 bug，与研发协商解决方案。</li>
+          <li>协助研发定位线上风控系统故障，与研发协商解决方案。</li>
           <li>管理风控规则，维护开发文档，参与开发和维护部分线上风控规则模块。</li>
           <li>实现全自动贷款审批，风控系统效果稳定提升，
           坏帐率达到行业内最低水平。</li>
@@ -259,7 +259,7 @@ dd ul {
           <li><em>YooliR</em>：
           实现与数据库交互；
           标准输出常用数据图表；
-          整合测试假设检验报告。</li>
+          整合常用的测试和假设检验方法。</li>
         </ul>
       </li>
       <li>对接三方数据服务。
@@ -270,7 +270,12 @@ dd ul {
         </ul>
       </li>
 
-      <li>风控团队建设：主持每周组会，定期组织学术和技术分享，每周汇总组员周报并撰写部门周报。
+      <li>领导风控团队，约 10 位同事。
+        <ul>
+          <li>协调工作任务分配，验收工作成果。</li>
+          <li>每周组织团队会议和学术技术分享。</li>
+          <li>审阅组员周报并撰写部门周报。</li>
+        </ul>
       </li>
 
     </ul>
@@ -290,7 +295,7 @@ dd ul {
     <ul>
       <li>博士课程：高级计量经济学，时间序列
       <li>本科课程：中级宏观经济学，经济学原理，金融学</li>
-      <li>每周讲授复习课/习题课，撰写作业题和试卷，提供答疑时间，负责CAPM（资本资产定价模型）部分课程，制作课件和文档。</li>
+      <li>每周讲授复习课/习题课，撰写作业题和试卷，提供答疑时间，负责 CAPM（资本资产定价模型）部分课程，制作课件和文档。</li>
     </ul>
     <h3>研究助理
       <span>2011 - 2014</span></h3>
@@ -304,7 +309,7 @@ dd ul {
     <h3>网站维护
       <span>2004 - 2005</span></h3>
     <ul>
-      <li>创建网站后台ASP数据库。</li>
+      <li>创建网站后台 ASP 数据库。</li>
       <li>维护网站服务器，为内容作者提供支持。</li>
     </ul>
     </dd>
@@ -332,8 +337,8 @@ dd ul {
           <strong>其他研究：</strong>
           <ul>
             <li>对比利用含有误差的高频市场数据估计日波动性的各种非参数统计量</li>
-            <li>GMM的最佳对角加权矩阵以及其效率边界</li>
-            <li>GMM最大熵方法的实际表现实验</li>
+            <li>GMM 的最佳对角加权矩阵以及其效率边界</li>
+            <li>GMM 最大熵方法的实际表现实验</li>
           </ul>
         </li>
       </ul>
