--- a/static/resume/resume_en.html
+++ b/static/resume/resume_en.html
@@ -117,9 +117,9 @@ dd ul {
   <div id="name">
   <h1 class="fn">
     <span id="wgs">Guansong Wang</span>
-    <a href="http://guansong.wang/img/wgsurl.png" id="qrcode"
+    <a href="http://public.guansong.wang/images/wgsurl.png" id="qrcode"
     style="text-decoration: none; border-bottom: 0">
-      <img src="http://guansong.wang/img/wgsurl.png" width="100px">
+      <img src="http://public.guansong.wang/images/wgsurl.png" width="100px">
     </a>
     </h1>
   </div>
@@ -127,11 +127,11 @@ dd ul {
 
     <!-- Microformats! -->
     <p>
-    Mobile: <span class="tel">+86-18624091940</span><br />
+    Mobile: <span class="tel">+86-16619751940</span><br />
     Email:
     <a class="email"
-      href="mailto:wangguansong@outlook.com">
-      wangguansong@outlook.com</a><br />
+      href="mailto:mail@guansong.wang">
+      mail@guansong.wang</a><br />
     Website:
     <a href="http://guansong.wang">
       http://guansong.wang
