--- a/static/resume/resume_zh.html
+++ b/static/resume/resume_zh.html
@@ -120,9 +120,9 @@ dd ul {
 
   <div id="name"><h1 class="fn">
     <span id="wgs">王冠嵩</span>
-    <a href="http://guansong.wang/img/wgsurl.png" id="qrcode"
+    <a href="http://public.guansong.wang/images/wgsurl.png" id="qrcode"
     style="text-decoration: none; border-bottom: 0">
-      <img src="http://guansong.wang/img/wgsurl.png" width="100px">
+      <img src="http://public.guansong.wang/images/wgsurl.png" width="100px">
     </a>
     </h1>
   </div>
@@ -130,11 +130,11 @@ dd ul {
 
     <!-- Microformats! -->
     <p>
-    手机: <span class="tel">18624091940</span><br />
+    手机: <span class="tel">16619751940</span><br />
     邮箱:
     <a class="email"
-      href="mailto:wangguansong@outlook.com">
-      wangguansong@outlook.com</a><br />
+      href="mailto:mail@guansong.wang">
+      mail@guansong.wang</a><br />
     网站:
     <a href="http://guansong.wang">
       http://guansong.wang
@@ -407,7 +407,7 @@ dd ul {
     <p>HTML & CSS，Javascript</p>
 
     <h2>语言</h2>
-      <p>英语：精通</p>
+      <p>中文（母语），英语（精通）</p>
 
     </dd>
 
