--- a/static/resume/resume_en.html
+++ b/static/resume/resume_en.html
@@ -147,7 +147,7 @@ dd ul {
 
   <div id="objective">
     <p>
-      Eager to learn, sensitive to data, leadership, <br/>
+      Sensitive to data, eager to learn, leadership, <br/>
       financial econometrics, statistics, data science,<br/>
       SQL, MongoDB, Hive,<br/>
       R, Shiny, Python, Linux.
