--- a/static/resume/resume_zh.html
+++ b/static/resume/resume_zh.html
@@ -150,11 +150,10 @@ dd ul {
 
   <div id="objective">
     <p>
-    持续学习 数据敏感 好奇 领导力<br />
-    金融计量经济学 统计学 数据挖掘<br />
+    数据敏感 好奇心 学习能力 领导力<br />
+    金融计量经济学 统计学 机器学习<br />
     SQL MongoDB Hive<br/>
     R Shiny Python Linux
-
     </p>
   </div>
 
