Add footnotes in resumes.

--- a/static/resume/resume_en.html
+++ b/static/resume/resume_en.html
@@ -161,7 +161,7 @@ dd ul {
 
     <dt>Experience</dt>
     <dd>
-    <h2>Yooli
+    <h2>Yooli<sup><a href="#footnote-1">[1]</a></sup>
       <span>Beijing, China</span></h2>
     <h3>Data Analyst
       <span>2016/05 - 2018/04</span></h3>
@@ -348,7 +348,7 @@ dd ul {
     <dd>
     <h2>The University of North Carolina at Chapel Hill
       <span>Chapel Hill, U.S.</span></h2>
-    <h3>Financial Econometrics, M.S., Ph.D. ABD
+    <h3>Financial Econometrics, M.S. (Ph.D. ABD)<sup><a href="#footnote-2">[2]</a></sup>
       <span>2007-2014</span></h3>
       <ul>
         <li>
@@ -396,9 +396,6 @@ dd ul {
 
     <dd class="clear"></dd>
 
-
-
-
     <dt>Projects</dt>
     <dd>
       <h2>Volatility analysis based on high frequency records of DJIA component stocks</h2>
@@ -423,10 +420,6 @@ dd ul {
     </dd>
 
     <dd class="clear"></dd>
-  </dl>
-
-  <div class="clear"></div>
-
 
     <dt>Skills</dt>
     <dd>
@@ -445,8 +438,26 @@ dd ul {
 
     <dd class="clear"></dd>
 
-</div>
+  </dl>
 
+  <div class="clear"></div>
+
+  <div>
+    <h2>Footnote</h2>
+    <p id="footnote-1">[1]
+      Causes of resignation: the risk management has changed from data-driving to experience-driving,
+      which deviated from my personal ability and future plan;
+      there were early signs of health issues due to overweight, I took it seriously and has lost 15 kg since then.
+      <a href="http://public.guansong.wang/images/yooli_reason.jpg">(Resignation Application)</a>
+    </p>
+    <p id="footnote-2">[2]
+      I was in the Ph.D. program of the Economics Department.
+      Because of the transfer of professors and personal reasons, I was not able to complete the dissertation.
+      Before I left I was qualified to get a Master degree.
+    </p>
+  </div>
+
+</div>
 </body>
 
 </html>
