--- a/static/resume/resume_zh.html
+++ b/static/resume/resume_zh.html
@@ -165,7 +165,7 @@ dd ul {
     <dt>工作经历</dt>
     <dd>
 
-    <h2>有利网
+    <h2>有利网<sup><a href="#footnote-1">[1]</a></sup>
       <span>北京</span></h2>
     <h3>数据分析师
       <span>2016-05 ~ 2018-04</span></h3>
@@ -319,7 +319,8 @@ dd ul {
     <dd>
     <h2>北卡罗莱纳大学教堂山分校
       <span>教堂山，美国</span></h2>
-    <h3>金融计量经济学，硕士，博士（未完成）<span>2007 - 2014</span></h3>
+    <h3>金融计量经济学，硕士，博士（未完成）<sup><a href="#footnote-2">[2]</a></sup>
+      <span>2007 - 2014</span></h3>
       <ul>
         <li>
           <strong>核心课程：</strong>
@@ -368,9 +369,6 @@ dd ul {
 
     <dd class="clear"></dd>
 
-
-
-
     <dt>研究项目</dt>
     <dd>
       <h2>道琼斯成份股的高频市场数据；每日波动性的非参数统计量</h2>
@@ -390,10 +388,6 @@ dd ul {
     </dd>
 
     <dd class="clear"></dd>
-  </dl>
-
-  <div class="clear"></div>
-
 
     <dt>技能</dt>
     <dd>
@@ -410,9 +404,23 @@ dd ul {
 
     </dd>
 
-    <dd class="clear"></dd>
+  </dl>
 
+  <div class="clear"></div>
+
+  <div>
+    <h2>脚注</h2>
+    <p id="footnote-1">[1]
+      离职原因：项目的风控风格由数据驱动转为经验驱动，所需能力与本人目前和未来规划偏离；由肥胖引起身体欠佳，需要调整状态，现已减重 15 kg。
+      <a href="http://public.guansong.wang/images/yooli_reason.jpg">（离职申请）</a>
+    </p>
+    <p id="footnote-2">[2]
+      就读于经济学院博士项目，由于导师调整以及个人原因，未能完成博士学位；由于已满足硕士资格，在离校前申请获得硕士学位。
+    </p>
+  </div>
 </div>
+
+
 
 </body>
 
