Change link target to _blank.

--- a/static/resume/resume_en.html
+++ b/static/resume/resume_en.html
@@ -448,7 +448,7 @@ dd ul {
       Causes of resignation: the risk management has changed from data-driving to experience-driving,
       which deviated from my personal ability and future plan;
       there were early signs of health issues due to overweight, I took it seriously and has lost 15 kg since then.
-      <a href="http://public.guansong.wang/images/yooli_reason.jpg">(Resignation Application)</a>
+      <a href="http://public.guansong.wang/images/yooli_reason.jpg" target="_blank">(Resignation Application)</a>
     </p>
     <p id="footnote-2">[2]
       I was in the Ph.D. program of the Economics Department.
