--- a/static/resume/resume_zh.html
+++ b/static/resume/resume_zh.html
@@ -412,7 +412,7 @@ dd ul {
     <h2>脚注</h2>
     <p id="footnote-1">[1]
       离职原因：项目的风控风格由数据驱动转为经验驱动，所需能力与本人目前和未来规划偏离；由肥胖引起身体欠佳，需要调整状态，现已减重 15 kg。
-      <a href="http://public.guansong.wang/images/yooli_reason.jpg">（离职申请）</a>
+      <a href="http://public.guansong.wang/images/yooli_reason.jpg" target="_blank">（离职申请）</a>
     </p>
     <p id="footnote-2">[2]
       就读于经济学院博士项目，由于导师调整以及个人原因，未能完成博士学位；由于已满足硕士资格，在离校前申请获得硕士学位。
