Edit resume beta edition.

--- a/static/resume/resume_zh.html
+++ b/static/resume/resume_zh.html
@@ -167,10 +167,22 @@ dd ul {
 
     <h2>有利网<sup><a href="#footnote-1">[1]</a></sup>
       <span>北京</span></h2>
-    <h3>数据分析师
-      <span>2016-05 ~ 2018-04</span></h3>
+
     <h3>现金贷风控负责人
       <span>2016-10 ~ 2018-04</span></h3>
+      <ul>
+        <li>对接三方数据：评估效果，整理开发文档，相关风控规则制定与优化。</li>
+        <li>组织风控团队约 10 人的日常工作分配和验收；
+          每周进行组会、分享以及周报汇总。</li>
+      </ul>
+
+    <h3>数据分析师
+      <span>2016-05 ~ 2018-04</span></h3>
+      <ul>
+        <li>a</li>
+        <li>b</li>
+      </ul>
+
     <ul>
       <li>运营和决策部门数据支持。
         <ul>
@@ -248,34 +260,7 @@ dd ul {
           模型的迭代速度从一个月一次到每周一次。</li>
         </ul>
       </li>
-      <li>开发和维护团队 R 程序包，简化和标准化团队的工作流程。
-        <ul>
-          <li><em>Rygpdl</em>：
-          实现与 SQL、MongoDB等多种数据库和数据接口的交互；
-          原始用户信息（文本）的数据清理和特征提取；
-          计算资产运营关键指标；
-          模型训练、验证和检验相关功能。</li>
-          <li><em>YooliR</em>：
-          实现与数据库交互；
-          标准输出常用数据图表；
-          整合常用的测试和假设检验方法。</li>
-        </ul>
-      </li>
-      <li>对接三方数据服务。
-        <ul>
-          <li>评估外部第三方数据服务，与服务方对接。</li>
-          <li>整理数据接口的开发文档，提出需求并与研发对接开发。</li>
-          <li>使用历史测试样本初始化风控规则，根据线上表现检测数据质量并改进风控规则。</li>
-        </ul>
-      </li>
 
-      <li>领导风控团队，约 10 位同事。
-        <ul>
-          <li>协调工作任务分配，验收工作成果。</li>
-          <li>每周组织团队会议和学术技术分享。</li>
-          <li>审阅组员周报并撰写部门周报。</li>
-        </ul>
-      </li>
 
     </ul>
 
@@ -369,8 +354,23 @@ dd ul {
 
     <dd class="clear"></dd>
 
-    <dt>研究项目</dt>
+    <dt>重要项目</dt>
     <dd>
+      <h2>开发和维护团队 R 程序包，简化和标准化团队的工作流程。
+        <span>有利网</span>
+      </h2>
+        <ul>
+          <li><em>Rygpdl</em>：
+          实现与 SQL、MongoDB等多种数据库和数据接口的交互；
+          原始用户信息（文本）的数据清理和特征提取；
+          计算资产运营关键指标；
+          模型训练、验证和检验相关功能。</li>
+          <li><em>YooliR</em>：
+          实现与数据库交互；
+          标准输出常用数据图表；
+          整合常用的测试和假设检验方法。</li>
+        </ul>
+
       <h2>道琼斯成份股的高频市场数据；每日波动性的非参数统计量</h2>
       <ul>
         <li>下载道琼斯指数从1992年到2013年成份股的高频市场数据（TAQ数据库，约400亿条记录）。
