--- a/static/resume/resume_zh_latest.html
+++ b/static/resume/resume_zh_latest.html
@@ -205,25 +205,25 @@ dd ul {
 
     <ul>
       <li>
-        推广渠道效果分析，制定 ROI 标准，甄别作弊行为。
-      </li>
-      <li>
-        设计并开发推广渠道的各阶段转化率监控系统。
-      </li>
-      <li>
-        营销活动策划以及 A/B 测试检验；
-        使用费舍尔精确检验替代卡方检验。
-      </li>
-      <li>
-        用户行为特征分析，如留存时间、行为偏好等等。
-      </li>
-      <li>
         建立基于 RFM 的用户行为概率模型，
         使电销团队可以对用户精准化营销。
       </li>
       <li>
         建立平台整体投资和赎回的时间序列模型，
         用于预测平台现金流。
+      </li>
+      <li>
+        推广渠道效果分析，制定 ROI 标准，甄别作弊行为。
+      </li>
+      <li>
+        营销活动策划以及 A/B 测试检验；
+        使用费舍尔精确检验替代卡方检验。
+      </li>
+      <li>
+        设计并开发推广渠道的各阶段转化率监控系统。
+      </li>
+      <li>
+        用户行为特征分析，如留存时间、行为偏好等等。
       </li>
       <li>
         开发维护数据可视化和报告工具（R/Shiny），大幅减少重复工作。
@@ -434,7 +434,7 @@ dd ul {
   <div>
     <h3>脚注</h3>
     <p id="footnote-1">[1]
-      离职原因：项目的风控风格由数据驱动转为经验驱动，
+      离职原因：项目的方向由数据驱动转为经验驱动，
       职位的定位与本人目前和未来规划偏离。
     </p>
     <p id="footnote-2">[2]
