Slight words change resume.

--- a/static/resume/resume_en_latest.html
+++ b/static/resume/resume_en_latest.html
@@ -460,12 +460,15 @@ dd ul {
   <div>
     <h3>Footnote</h3>
     <p id="footnote-1">[1]
-      Causes of resignation: the risk management has changed from data-driving to experience-driving,
-      which makes the position deviating from my personal ability and future plan.
+      Resignation: the project has changed from data-driving to
+      experience-driving,
+      which makes the position deviating from my personal ability and
+      career plan.
     </p>
     <p id="footnote-2">[2]
       I was in the Ph.D. program of the Economics Department.
-      Because of the transfer of professors and personal reasons, I was not able to complete the dissertation.
+      Because of the transfer of professors and personal reasons,
+      I was not able to complete the dissertation.
       Before I left I was qualified to get a Master degree.
     </p>
   </div>
