--- a/static/resume/resume_zh_latest.html
+++ b/static/resume/resume_zh_latest.html
@@ -172,7 +172,7 @@ dd ul {
     <ul>
       <li>
         设计风控系统，提供开发文档；
-        参与开发维护和后续系统迭代工作。
+        参与开发维护和系统迭代工作。
         实现了全自动信用审核，风控系统效果稳定提升，
         坏帐率达到行业最低水平。
       </li>
@@ -319,7 +319,7 @@ dd ul {
         </li>
         <li>
           设计风控系统流程，完成风控系统的生产开发文档，
-          测试并验收风控系统。
+          测试验收风控系统。
         </li>
         <li>
           协助定位线上风控系统故障，与研发确认解决方案；
@@ -369,7 +369,7 @@ dd ul {
           封装与 SQL、MongoDB等多种数据库和数据接口的交互。
         </li>
         <li>
-          数据清理和特征提取。
+          常用的数据清理和特征提取方法。
         </li>
         <li>
           常用指标、表格和曲线的标准化输出。
